--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ arch==5.3.1
 image_quality==1.2.7
 lpips==0.1.4
 matplotlib==3.5.3
-numpy==1.18.5
+numpy
 opencv_contrib_python==4.7.0.72
 Pillow==9.5.0
 scipy==1.7.3
@@ -13,3 +13,4 @@ tqdm==4.65.0
 einops==0.6.1
 lpips==0.1.4
 opencv-python
+gradio
