--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,10 @@ opencv_contrib_python==4.7.0.72
 Pillow==9.5.0
 scipy==1.7.3
 thop
-torch==1.13.1
-torchvision==0.14.1
 tqdm==4.65.0
 einops==0.6.1
 lpips==0.1.4
 opencv-python
-gradio
+gradio==3.50.2
 huggingface_hub
 safetensors
